improve json/form-data conversion

--- a/template/index.html
+++ b/template/index.html
@@ -208,11 +208,7 @@
         {{#each params}}
           <tr>
             <td class="code">
-            {{#if this.parentInfo}}
-              {{{nestObject this.parentInfo.path this.field}}}
-            {{else}}
-              {{this.field}}
-            {{/if}}
+            {{{nestObject this}}}
             {{#if this.optional}}
               <span class="label optional">{{__ "optional"}}</span>
             {{else}}
@@ -256,11 +252,7 @@
         {{#each params}}
           <tr>
             <td class="code">
-            {{#if this.parentInfo}}
-              {{{nestObject this.parentInfo.path this.field}}}
-            {{else}}
-              {{this.field}}
-            {{/if}}
+            {{{nestObject this}}}
             {{#if this.optional}}
               <span class="label optional">{{__ "optional"}}</span>
             {{else}}
@@ -309,11 +301,7 @@
         {{#each this}}
           <tr>
             <td class="code">
-            {{#if parentInfo}}
-              {{{nestObject parentInfo.path field}}}
-            {{else}}
-              {{field}}
-            {{/if}}
+            {{{nestObject this}}}
             {{#if optional}}
               <span class="label optional">{{__ "optional"}}</span>
             {{else}}
@@ -423,12 +411,12 @@
               {{#each this}}
               <div class="form-group">
                 {{#ifCond type '!==' 'Object'}}{{#ifCond type '!==' 'Object[]'}}
-                <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{dot2bracket field parentInfo}}</label>
+                <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
                 <div class="input-group">
                   {{#if allowedValues}}
                   <div class="input-group-addon">{{{type}}}</div>
                   <div class="input-group-addon sample-request-select">
-                    <select class="form-control" data-name="{{dot2bracket field parentInfo}}" data-family="query" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
+                    <select class="form-control" data-name="{{dot2bracket this}}" data-family="query" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
                       <option value="" class="empty">&lt;{{__ "No value"}}&gt;</option>
                       {{#each allowedValues}}
                       <option {{#ifCond ../defaultValue '===' this}} selected {{/ifCond}}value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
@@ -441,8 +429,8 @@
                     class="form-control sample-request-param"
                     type="{{setInputType type}}"
                     value="{{#if defaultValue}}{{ defaultValue }}{{/if}}"
-                    placeholder="{{#if defaultValue}}{{ defaultValue }}{{else}}{{dot2bracket field parentInfo}}{{/if}}"
-                    data-name="{{dot2bracket field parentInfo}}"
+                    placeholder="{{#if defaultValue}}{{ defaultValue }}{{/if}}"
+                    data-name="{{dot2bracket this}}"
                     data-family="query"
                     data-group="{{@../index}}"
                     {{#if optional}}data-optional="true"{{/if}}>
@@ -463,12 +451,12 @@
           {{#each article.query}}
             <div class="form-group">
               {{#ifCond type '!==' 'Object'}}{{#ifCond type '!==' 'Object[]'}}
-              <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{dot2bracket field parentInfo}}{{#if optional}} ({{__ "optional"}}){{/if}}</label>
+              <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}{{#if optional}} ({{__ "optional"}}){{/if}}</label>
               <div class="input-group col-md-6">
                 <div class="input-group-addon">{{{type}}}</div>
                 {{#if allowedValues}}
                 <div class="input-group-addon sample-request-select">
-                  <select class="form-control" data-name="{{dot2bracket field parentInfo}}" data-family="query" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
+                  <select class="form-control" data-name="{{dot2bracket this}}" data-family="query" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
                     <option value="" class="empty">&lt;{{__ "No value"}}&gt;</option>
                     {{#each allowedValues}}
                     <option {{#ifCond ../defaultValue '===' this}} selected {{/ifCond}}value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
@@ -481,8 +469,8 @@
                   class="form-control sample-request-input"
                   type="{{setInputType type}}"
                   value="{{#if defaultValue}}{{ defaultValue }}{{/if}}"
-                  placeholder="{{#if defaultValue}}{{ defaultValue }}{{else}}{{dot2bracket field parentInfo}}{{/if}}"
-                  data-name="{{dot2bracket field parentInfo}}"
+                  placeholder="{{#if defaultValue}}{{ defaultValue }}{{/if}}"
+                  data-name="{{dot2bracket this}}"
                   data-family="query"
                   data-group="{{@../index}}"
                   {{#if optional}}data-optional="true"{{/if}}>
@@ -522,12 +510,12 @@
           {{#each article.body}}
             <div class="form-group">
               {{#ifCond type '!==' 'Object'}}{{#ifCond type '!==' 'Object[]'}}
-              <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{dot2bracket field parentInfo}}</label>
+              <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
               <div class="input-group">
                 <div class="input-group-addon">{{{type}}}</div>
                 {{#if allowedValues}}
                 <div class="input-group-addon sample-request-select">
-                  <select class="form-control" data-name="{{dot2bracket field parentInfo}}" data-family="body" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
+                  <select class="form-control" data-name="{{dot2bracket this}}" data-family="body" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
                     <option value="" class="empty">&lt;{{__ "No value"}}&gt;</option>
                     {{#each allowedValues}}
                     <option {{#ifCond ../defaultValue '===' this}} selected {{/ifCond}}value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
@@ -541,9 +529,9 @@
                   type="{{setInputType type}}"
                   value="{{#ifCond type '!==' 'Boolean'}}{{#if defaultValue}}{{ defaultValue }}{{/if}}{{/ifCond}}"
                   {{#if checked}}checked{{/if}}
-                  placeholder="{{dot2bracket field parentInfo}}"
+                  placeholder="{{#if defaultValue}}{{ defaultValue }}{{/if}}"
                   data-family="body"
-                  data-name="{{dot2bracket field parentInfo}}"
+                  data-name="{{dot2bracket this}}"
                   data-content-type="form"
                   {{#if optional}}data-optional="true"{{/if}}>
                 {{/if}}
@@ -836,11 +824,7 @@
       {{#if typeSame}}
         <tr>
           <td class="code">
-            {{#if source.parentInfo}}
-              {{{nestObject source.parentInfo.path source.field}}}
-            {{else}}
-              {{source.field}}
-            {{/if}}
+            {{{nestObject source}}}
             {{#if source.optional}}
               {{#if compare.optional}} <span class="label label-optional">{{__ "optional"}}</span>
               {{else}} <span class="label label-optional label-ins">{{__ "optional"}}</span>
@@ -873,11 +857,7 @@
       {{#if typeIns}}
         <tr class="ins">
           <td class="code">
-            {{#if source.parentInfo}}
-              {{{nestObject source.parentInfo.path source.field}}}
-            {{else}}
-              {{source.field}}
-            {{/if}}
+            {{{nestObject source}}}
             {{#if source.optional}} <span class="label label-optional label-ins">{{__ "optional"}}</span>{{/if}}
           </td>
 
@@ -897,11 +877,7 @@
       {{#if typeDel}}
         <tr class="del">
           <td class="code">
-            {{#if compare.parentInfo}}
-              {{{nestObject compare.parentInfo.path compare.field}}}
-            {{else}}
-              {{compare.field}}
-            {{/if}}
+            {{{nestObject compare}}}
             {{#if compare.optional}} <span class="label label-optional label-del">{{__ "optional"}}</span>{{/if}}
           </td>
 
